Completed subjectg apis.
